--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ theme: jekyll-theme-chirpy
 lang: zh-CN
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Asia/Shanghai
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
@@ -26,10 +26,10 @@ description: >- # used by seo meta and the atom feed
 url: "https://xiangluanliang.github.io"
 
 github:
-  username: xiangluanliang # change to your GitHub username
+  username: xiangluanliang
 
-twitter:
-  username: twitter_username # change to your Twitter username
+bilibili:
+  username: 凉香栾
 
 social:
   # Change to your full name.
@@ -38,11 +38,8 @@ social:
   email: orangelxl741216@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
     - https://github.com/xiangluanliang # change to your GitHub homepage
-    # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://space.bilibili.com/456009262
 
 # Site Verification Settings
 webmaster_verifications:
@@ -97,8 +94,8 @@ theme_mode: # [light | dark]
 # e.g. 'https://cdn.com'
 cdn:
 
-# the avatar on sidebar, support local or CORS resources
-avatar:
+# avatar: '/assets/img/avatar.jpg'
+avatar: '/assets/img/avatar2.jpg'
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
