--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,8 +3,9 @@
 - type: github
   icon: "fab fa-github"
 
-# - type: bilibili
-#   icon: "fas fa-tv"
+- type: bilibili
+  icon: "fab fa-bilibili"
+  url: "https://space.bilibili.com/456009262"
 
 - type: email
   icon: "fas fa-envelope"
